--- a/.github/workflows/github-actions-preflight.yml
+++ b/.github/workflows/github-actions-preflight.yml
@@ -16,7 +16,7 @@ jobs:
         id: preflight
         uses: c2dh/journal-of-digital-history-ipynb-preflight-action@master
         with:
-          notebook: 'author_guideline_template.ipynb'
+          notebook: '3d_voyages-anonymous.ipynb'
           functions: 'checkcitation,checkoutput,checkhtml,checkjavascript,checktags,checkurls'
           output_md: 'report.md'
       # Use the output from the `preflight` step
